@@ -1,9 +1,12 @@
-package dumb.mcr.code;
+package dumb.hack.util;
 
 import org.junit.jupiter.api.Test;
+
 import java.nio.file.Paths;
 import java.util.List;
-import static org.junit.jupiter.api.Assertions.*;
+
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 public class CodeParserTest {
 
@@ -24,7 +27,7 @@ public class CodeParserTest {
         List<String> facts = parser.parse(Paths.get("file.txt"), textContent);
 
         assertEquals(1, facts.size());
-        assertEquals("file('file.txt', 'This is a generic file.').", facts.get(0));
+        assertEquals("file('file.txt', 'This is a generic file.').", facts.getFirst());
     }
 
     @Test
